Bunch of improvements / tweaks for the install doc

--- a/docs/admin/05.get_started/20.install_on/on_top_of_debian.mdx
+++ b/docs/admin/05.get_started/20.install_on/on_top_of_debian.mdx
@@ -1,6 +1,6 @@
 ---
 title: On top of Debian
-description: If you can't use preinstalled images
+description: Typically on a VPS, or if you can't use preinstalled images
 sidebar_position: 6
 sidebar_custom_props:
   doc_card_image: /img/icons/logo-debian.png
