--- a/docs/admin/05.get_started/20.install_on/raspberry_pi.mdx
+++ b/docs/admin/05.get_started/20.install_on/raspberry_pi.mdx
@@ -1,6 +1,6 @@
 ---
 title: On a Raspberry Pi
-description: Our preferred baked boards
+description: One of the most popular baked boards
 sidebar_position: 1
 sidebar_custom_props:
   doc_card_image: /img/icons/icon-raspberrypi.png
@@ -32,7 +32,9 @@ and then [follow the instructions](./on_top_of_debian) to install YunoHost on De
 ## <FAIcon icon="fa-download" /> Download the YunoHost image
 
 :::note
-If you wish to check the validity of our signed images, you can [download our public key](https://forge.yunohost.org/keys/yunohost_bookworm.asc).
+(FIXME: this bit is currently broken...)
+
+Optionally, you can [download the project's public key](https://forge.yunohost.org/keys/yunohost_bookworm.asc) to check the authenticity of the images.
 :::
 
 <YunoHostImagesList hardware="rpi345"/>
