--- a/docs/admin/05.get_started/20.install_on/virtualbox.mdx
+++ b/docs/admin/05.get_started/20.install_on/virtualbox.mdx
@@ -28,7 +28,9 @@ If your host OS is 32 bits, be sure to download the 32-bit image.
 :::
 
 :::note
-If you wish to check the validity of our signed images, you can [download our public key](https://forge.yunohost.org/keys/yunohost_bookworm.asc).
+(FIXME: this bit is currently broken...)
+
+Optionally, you can [download the project's public key](https://forge.yunohost.org/keys/yunohost_bookworm.asc) to check the authenticity of the images.
 :::
 
 <YunoHostImagesList hardware="virtualbox"/>
