--- a/docs/admin/05.get_started/20.install_on/wsl.mdx
+++ b/docs/admin/05.get_started/20.install_on/wsl.mdx
@@ -1,6 +1,6 @@
 ---
 title: On WSL
-description: Experimental, for testing purposes
+description: Experimental, for people who like cyberfrankensteins
 sidebar_position: 8
 sidebar_custom_props:
   doc_card_image: /img/icons/logo-wsl.png
