--- a/docs/admin/05.get_started/20.install_on/_configuration.mdx
+++ b/docs/admin/05.get_started/20.install_on/_configuration.mdx
@@ -3,19 +3,25 @@ import TabItem from '@theme/TabItem';
 
 ## <FAIcon icon="fa-cog"/> Proceed with the initial configuration
 
-:::tip
+:::info
 If you are in the process of restoring a server using a YunoHost backup, you should skip this step and instead [restore the backup instead of the postinstall step](/admin/backups).
 :::
 
-:::note
+:::info
 This documentation assumes you're on the same local network as your YunoHost installation.
-[Find out its IP address](/admin/get_started/post_install/find_ip) before continuing.
 
 For a VPS, please use the public IP address instead of the local domain or address.
 :::
 
 <Tabs groupId="admin-commands">
 <TabItem value="web" label="From the web interface">
+
+On a computer, open a browser and try to reach the webadmin:
+- if you're installing on a VPS, you probably used the `curl | bash` install method, and it should have pointed you with the address, typically `https://xx.xx.xx.xx` (with the **public IPv4** of your server)
+- if you're installing at home, and assuming that *you are on the same local network as the server*
+    - you can try to open https://yunohost.local (this may or may not work depending if your computer and network supports the Bonjour protocol)
+    - if you already know the local IP of the machine, go to `https://xx.xx.xx.xx` (with the **local** IP, typically starting with `192.168.`)
+    - otherwise you will need to [find out its local IP ](/admin/get_started/post_install/find_ip) before continuing.
 
 :::warning
 During the first visit, you will very likely encounter a security warning related to the certificate used by the server. For now, your server uses a self-signed certificate. You will later be able to add a certificate automatically recognized by web browsers as described in the [certificate documentation](/admin/domains/certificate). For now, you should add a security exception to accept the current certificate. (Though, PLEASE, do not take the habit of blindly accepting this kind of security alert!)
