--- a/docs/admin/05.get_started/20.install_on/raspberry_pi.mdx
+++ b/docs/admin/05.get_started/20.install_on/raspberry_pi.mdx
@@ -1,6 +1,6 @@
 ---
 title: On a Raspberry Pi
-description: Our preferred baked boards
+description: One of the most popular baked boards
 sidebar_position: 1
 sidebar_custom_props:
   doc_card_image: /img/icons/icon-raspberrypi.png
@@ -32,7 +32,9 @@ and then [follow the instructions](./on_top_of_debian) to install YunoHost on De
 ## <FAIcon icon="fa-download" /> Download the YunoHost image
 
 :::note
-If you wish to check the validity of our signed images, you can [download our public key](https://forge.yunohost.org/keys/yunohost_bookworm.asc).
+(FIXME: this bit is currently broken...)
+
+Optionally, you can [download the project's public key](https://forge.yunohost.org/keys/yunohost_bookworm.asc) to check the authenticity of the images.
 :::
 
 <YunoHostImagesList hardware="rpi345"/>
@@ -42,30 +44,35 @@ If you wish to check the validity of our signed images, you can [download our pu
 Now that you downloaded the image of YunoHost, you should flash it on a microSD card
 
 <Tabs>
-  <TabItem value="etcher" label="With Etcher (recommended)">
+<TabItem value="etcher" label="With Etcher (recommended)">
+
     Download <Link to="https://www.balena.io/etcher/" target="_blank">Etcher</Link> for your operating system and install it.
 
     Plug your SD card, select your image and click "Flash"
 
     ![Etcher](/img/softwares/etcher.gif)
-  </TabItem>
-  <TabItem value="usbimager" label="With USBimager">
-    Download [USBimager](https://bztsrc.gitlab.io/usbimager/) for your operating system and install it.
 
-    Plug your SD card, select your image and click "Write"
+</TabItem>
+<TabItem value="usbimager" label="With USBimager">
 
-    ![USBimager](/img/softwares/usbimager.png)
-  </TabItem>
-  <TabItem value="dd" label="With dd">
-    If you are on GNU/Linux / macOS and know your way around command line, you may also flash your USB stick or SD card with `dd`. You can identify which device corresponds to your USB stick or SD card with `fdisk -l` or `lsblk`. A typical SD card name is something like `/dev/mmcblk0`. BE CAREFUL and make sure you got the right name.
+Download [USBimager](https://bztsrc.gitlab.io/usbimager/) for your operating system and install it.
 
-    Then run:
+Plug your SD card, select your image and click "Write"
 
-    ```bash
-    # Replace /dev/mmcblk0 if the name of your device is different...
-    dd if=/path/to/yunohost.img of=/dev/mmcblk0 status=progress ; sync
-    ```
-  </TabItem>
+![USBimager](/img/softwares/usbimager.png)
+
+</TabItem>
+<TabItem value="dd" label="With dd">
+
+If you are on GNU/Linux / macOS and know your way around command line, you may also flash your USB stick or SD card with `dd`. You can identify which device corresponds to your USB stick or SD card with `fdisk -l` or `lsblk`. A typical SD card name is something like `/dev/mmcblk0`. BE CAREFUL and make sure you got the right name.
+
+Then run:
+
+```bash
+# Replace /dev/mmcblk0 if the name of your device is different...
+dd if=/path/to/yunohost.img of=/dev/mmcblk0 status=progress ; sync
+```
+</TabItem>
 </Tabs>
 
 ## <FAIcon icon="fa-plug"/> Power up the board
