--- a/docs/admin/40.backups/index.mdx
+++ b/docs/admin/40.backups/index.mdx
@@ -5,10 +5,7 @@ title: 🚑 Backups
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-import Highlight from '@site/src/components/Highlight';
-import {HighlightWebAdmin, HighlightDiagnosis, HighlightApplications, HighlightAppInstall} from '@site/src/components/Highlight';
-
-In the context of self-hosting, backups are an important element to compensate for unexpected events (fire, database corruption, loss of access to the server, compromised server...). The backup policy to implement depends on the importance of the services and data you manage. For example, backing up a test server will be of little interest, while you will want to be very careful if you are managing critical data for an association or a company - and in such cases, you will want to store the backups *in a different location or locations*.
+In the context of self-hosting, backups are essential for mitigating the impact of unexpected events—such as fires, database corruption, server access issues, or security breaches. The backup strategy you implement should be tailored to the importance of the services and data you are managing. For instance, backing up a test server will be of little interest, whereas when handling critical data for an NGO or business, backups become much more vital. In these cases, it’s crucial to store backups in one, or ideally **several** locations.
 
 ## Manual backup
 
@@ -18,72 +15,73 @@ You can manage backups either from the command line (`yunohost backup --help`) o
 
 The current default method consists in creating a `.tar` archive containing all relevant files.
 
-### Creating backups
+#### Creating backups
 
 <Tabs groupId="admin-commands">
-  <TabItem value="web" label="From the web interface">
+<TabItem value="web" label="From the web interface">
+
 You can easily create backup archives from the webadmin by going to `Backups > Local storage` and clicking on `New backup`. You will then be asked to select which configuration, data and apps you want to backup.
 
 ![picture of YunoHost's backup pannel](/img/webadmin/backup.png)
 
-  </TabItem>
-  <TabItem value="cli" label="From the command line">
+</TabItem>
+<TabItem value="cli" label="From the command line">
 
 You can create a new backup archive from the command line. Here are a few simple examples of commands and their corresponding behavior:
 
 - Backing up everything (all system parts and apps):
 
-  ```bash
-  yunohost backup create
-  ```
+```bash
+yunohost backup create
+```
 
 - Backing up only apps
 
-  ```bash
-  yunohost backup create --apps
-  ```
+```bash
+yunohost backup create --apps
+```
 
 - Backing up only two apps (wordpress and shaarli)
 
-  ```bash
-  yunohost backup create --apps wordpress shaarli
-  ```
+```bash
+yunohost backup create --apps wordpress shaarli
+```
 
 - Backing up only emails
 
-  ```bash
-  yunohost backup create --system data_mail
-  ```
+```bash
+yunohost backup create --system data_mail
+```
 
 - Backing up emails and wordpress
 
-  ```bash
-  yunohost backup create --system data_mail --apps wordpress
-  ```
+```bash
+yunohost backup create --system data_mail --apps wordpress
+```
 
 For more information and options about backup creation, consult `yunohost backup create --help`. You can also list the system parts that can be backed up with `yunohost hook list backup`.
 
-  </TabItem>
+</TabItem>
 </Tabs>
 
 ### Downloading backups
 
 <Tabs groupId="admin-commands">
-  <TabItem value="web" label="From the web interface">
+<TabItem value="web" label="From the web interface">
 
 After creating backups, it is possible to list and inspect them using the corresponding views in the web administration interface. A button allows you to download the archive. If the archive is larger than 3GB, it may be better to proceed via SFTP.
 
 `Backup > Local Archives > <Archive name> > Download`
 
-  </TabItem>
-  <TabItem value="sftp" label="With a SFTP client">
+</TabItem>
+<TabItem value="sftp" label="With a SFTP client">
 
 Currently, the most accessible way to download big archives is to use the program FileZilla as explained in [this page](/admin/tutorials/filezilla).
 
 By default, backups are stored in `/home/yunohost.backup/archives/`.
 
-  </TabItem>
-  <TabItem value="cli" label="From the command line">
+</TabItem>
+<TabItem value="cli" label="From the command line">
 
 The `yunohost backup list` and `yunohost backup info <archive_name>` commands provide information about the names and sizes of backups.
 
@@ -99,7 +97,7 @@ If your SSH port is different from 22
 scp -P ssh_port admin@your.domain.tld:/home/yunohost.backup/archives/<archive_name>.tar ./
 ```
 
-  </TabItem>
+</TabItem>
 </Tabs>
 
 
@@ -135,14 +133,14 @@ SPOILER: The larger your data volume and the more applications you have, the mor
 #### Simple case: little data, archive already present
 
 <Tabs groupId="admin-commands">
-  <TabItem value="web" label="From the web interface">
+<TabItem value="web" label="From the web interface">
 
 Go in `Backup > Local storage` and select your archive. You can then select which items you want to restore, then click on 'Restore'.
 
 ![picture of YunoHost's restore pannel](/img/webadmin/restore.png)
 
-  </TabItem>
-  <TabItem value="cli" label="From the command line">
+</TabItem>
+<TabItem value="cli" label="From the command line">
 
 From the command line, you can run `yunohost backup list` to get the available archive names. They are basically their file name without extension.
 
@@ -152,7 +150,7 @@ You can then run `yunohost backup restore <archivename>` (hence without its `.ta
 In the case of a complete restoration, it is possible to restore instead of launching the initial configuration.
 :::
 
-  </TabItem>
+</TabItem>
 </Tabs>
 
 To restore an app, the domain on which it was installed should already be configured (or you need to restore the corresponding system configuration). You also cannot restore an app which is already installed... which means that to restore an old version of an app, you must first uninstall it.
@@ -162,16 +160,16 @@ To restore an app, the domain on which it was installed should already be config
 In many cases, the archive is not on the server on which you want to restore it. So it has to be uploaded, which depending on its size can take more or less time.
 
 <Tabs groupId="admin-commands">
-  <TabItem value="sftp" label="With a SFTP client">
+<TabItem value="sftp" label="With a SFTP client">
 
 Currently, the most accessible solution for uploading backups is to use the FileZilla program as explained in [this page](/admin/tutorials/filezilla).
 
 By default, backups are to be placed in `/home/yunohost.backup/archives/`.
 
-  </TabItem>
-  <TabItem value="cli" label="From the command line">
+</TabItem>
+<TabItem value="cli" label="From the command line">
 
-You can upload a backup from a machine to your server with :
+You can use the `scp` (a command built on `ssh`) to copy files between two machines from CLI. For example for a Linux terminal:
 
 ```bash
 scp /path/to/your/<archive_name>.tar admin@your.domain.tld:/home/yunohost.backup/archives/
@@ -183,5 +181,5 @@ If your SSH port is different from 22
 scp -P ssh_port /path/to/your/<archive_name>.tar admin@your.domain.tld:/home/yunohost.backup/archives/
 ```
 
-  </TabItem>
+</TabItem>
 </Tabs>
