--- a/docs/admin/35.email/05.clients.mdx
+++ b/docs/admin/35.email/05.clients.mdx
@@ -47,13 +47,15 @@ Follow the following steps. (As for Thunderbird Desktop, you might need to accep
 
 - Enter your email address then click "Next"
 
-  <img src="/img/softwares/thunderbird_mobile_config_1.png" alt='' width="280"/>
+<img src="/img/softwares/thunderbird_mobile_config_1.png" width="280"/>
+
 - Enter your domain name in the "Server" field, fill the "Security" and "Port" fields as per the IMAP row in the table above, then enter your password in the "Password" field and click "Next"
 
-  <img src="/img/softwares/thunderbird_mobile_config_2.png" alt='' width="280"/>
+<img src="/img/softwares/thunderbird_mobile_config_2.png" width="280"/>
+
 - Again, your domain name in the "Server" field, but fill the "Security" and "Port" fields as per the SMTP row in the table above, then enter your password in the "Password" field and click "Next"
 
-  <img src="/img/softwares/thunderbird_mobile_config_3.png" alt='' width="280"/>
+<img src="/img/softwares/thunderbird_mobile_config_3.png" width="280"/>
 
 </TabItem>
 <TabItem value="dekko" label="Dekko">
