--- a/docs/admin/35.email/index.mdx
+++ b/docs/admin/35.email/index.mdx
@@ -32,7 +32,7 @@ Mail aliases and forwards can be configured for each users. For instance, the fi
 
 Another feature which few people know about is the use of suffixes beginning with "+". For example, emails sent to `johndoe+booking@the.domain.tld` will automatically land in the `booking` dir (lowercase) of John Doe's mailbox or in John Doe's inbox if `booking` directory doesn't exist . It is a practical technique for example to provide an e-mail address to a website, then easily sort (via automatic filters) the mail coming from this website.
 
-Groups also can use alias features, by default the group `admins` have `root@<domain.tld>` or `webmaster@<domain.tld>`. [More information to use-it with the dedicated page](/admin/users/groups_and_permissions#config-alias-group).
+Groups also can use alias features, by default the group `admins` has aliases such as `root@<domain.tld>` and `webmaster@<domain.tld>`. [More info on the groups and permission page](/admin/users/groups_and_permissions).
 
 ## What happens if my server becomes unavailable?
 
