Hmpf bad link shenaningans

--- a/i18n/it/docusaurus-plugin-content-docs/current/admin/40.backups/05.evaluate.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/admin/40.backups/05.evaluate.mdx
@@ -26,7 +26,7 @@ Esempi di **backup sicuro e facilmente recuperabile**.
 
 ## Alcuni esempi di esecuzione del backup
 
-- [generate an archive and download it manually (default method of YunoHost)](/admin/backups/#manual-backup)
+- [generate an archive and download it manually (default method of YunoHost)](/admin/backups)
 - [backup automatically (recommended method)](/admin/backups/backup_methods)
 - [generate an archive directly on another disk](/admin/tutorials/external_storage)
 - [make a disk image or snapshot](/admin/backups/clone_filesystem)
