Drop ISP-specific pages for Orange/SFR/Free, keep the part about freebox storage as a specific page in the tutorial section

--- a/docs/admin/05.get_started/10.providers/10.isp.mdx
+++ b/docs/admin/05.get_started/10.providers/10.isp.mdx
@@ -93,7 +93,7 @@ Regulations in Finland prohibit the use of Port 25 for consumers.
 :::
 
 </TabItem>
-<TabItem value="fra" label="France">
+<TabItem value="fra" label="France" default>
 
 :::tip
 Tous les fournisseurs d’accès à Internet [membres de la Fédération French Data Network](http://www.ffdn.org/fr/membres) ont une politique favorable à l’auto-hébergement.
@@ -173,7 +173,7 @@ Most of non business IP provided by ISP are blacklisted.
 
 <TabItem value="northamerica">
 <Tabs>
-<TabItem value="canada" label="Canada" default>
+<TabItem value="canada" label="Canada">
 
 | Service provider | Box (modem/router) | uPnP available | Port 25 openable | [Hairpinning](http://en.wikipedia.org/wiki/Hairpinning) | Customizable reverse DNS | Fix IP |
 | --- | --- | --- | --- | --- | --- | --- |
